urine and stool investigations are multi-selects

--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -373,20 +373,20 @@
     <label>Result: Platelets (cmm)</label>
   </input>
 
-  <select1 ref="investigations/urine">
+  <select ref="investigations/urine">
     <label>Result: Urine</label>
     <item><label>Blood</label><value>blood</value></item>
     <item><label>Glucose</label><value>glucose</value></item>
     <item><label>Protein</label><value>protein</value></item>
     <item><label>White cells</label><value>whitecells</value></item>
-  </select1>
+  </select>
 
-  <select1 ref="investigations/stool">
+  <select ref="investigations/stool">
     <label>Result: Stool</label>
     <item><label>Blood</label><value>blood</value></item>
     <item><label>Pus</label><value>pus</value></item>
     <item><label>Parasite/Bacteria</label><value>parasite_bacteria</value></item>
-  </select1>
+  </select>
 
   <select1 ref="investigations/cxr">
     <label>Result: CXR</label>
