add outcome values to general form

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -490,21 +490,21 @@
     <label>Follow up in how many days?</label>
   </input>
 
-  <select1 ref="outcome">
+  <select1 ref="outcome">   
     <label>Select Outcome to Case</label>
-    <item><label>Diarrhea Treated</label><value>1</value></item>
-    <item><label>Upper UTI Treated</label><value>2</value></item>
-    <item><label>Pneumonia Treated</label><value>3</value></item>
-    <item><label>Malaria Treated</label><value>4</value></item>
-    <item><label>Other Fever Treated</label><value>5</value></item>
-    <item><label>TB on Treatment / Referred</label><value>6</value></item>
-    <item><label>Hypertension Controlled</label><value>7</value></item>
-    <item><label>Cardiac Disease Referred</label><value>8</value></item>
-    <item><label>HIV Managed / Referred</label><value>9</value></item>
-    <item><label>Diabetes Managed</label><value>10</value></item>
-    <item><label>STI Treated</label><value>11</value></item>
-    <item><label>Injuries Treated</label><value>12</value></item>
-    <item><label>Other</label><value>13</value></item>
+    <item><label>Diarrhea Treated</label><value>diarrhea_treated</value></item>
+    <item><label>Upper UTI Treated</label><value>upper_uti_treated</value></item>
+    <item><label>Pneumonia Treated</label><value>pneumonia_treated</value></item>
+    <item><label>Malaria Treated</label><value>malaria_treated</value></item>
+    <item><label>Other Fever Treated</label><value>other_fever_treated</value></item>
+    <item><label>TB on Treatment / Referred</label><value>tb_on_treatment</value></item>
+    <item><label>Hypertension Controlled</label><value>hypertension_controlled</value></item>
+    <item><label>Cardiac Disease Referred</label><value>cardiac_disease_referred</value></item>
+    <item><label>HIV Managed / Referred</label><value>hiv_managed</value></item>
+    <item><label>Diabetes Managed</label><value>diabetes_managed</value></item>
+    <item><label>STI Treated</label><value>sti_treated</value></item>
+    <item><label>Injuries Treated</label><value>injuries_treated</value></item>
+    <item><label>Other</label><value>other</value></item>
   </select1>
 
 </h:body>
