minor tweak to wording on chw referral form

--- a/bhoma/xforms/bhoma_under_five.xhtml
+++ b/bhoma/xforms/bhoma_under_five.xhtml
@@ -180,7 +180,7 @@
   </select1>
 
   <input ref="chw_referral_id">
-    <label>Enter CHW Referral # (if applicable)</label>
+    <label>Enter CHW Referral # (leave blank if not available)</label>
   </input>
 
   <input ref="vitals/height">
