--- a/bhoma/xforms/bhoma_sick_pregnancy.xhtml
+++ b/bhoma/xforms/bhoma_sick_pregnancy.xhtml
@@ -175,7 +175,7 @@
   </select1>
 
   <input ref="chw_referral_id">
-    <label>Enter CHW Referral # (if applicable)</label>
+    <label>Enter CHW Referral # (leave blank if not available)</label>
   </input>
 
   <input ref="vitals/bp">
