changed all values for assessment symptoms that were numbers to be more descriptive for reference by reports

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -267,53 +267,53 @@
 
   <select ref="assessment/resp">
     <label>Assessment: Select Symptoms of Cough/Difficulty Breathing</label>
-    <item><label>SEVERE: very fast breathing</label><value>1</value></item>
-    <item><label>SEVERE: severe chest pain</label><value>2</value></item>
-    <item><label>SEVERE: cannot walk without help</label><value>3</value></item>
-    <item><label>SEVERE: uncomfortable lying down</label><value>4</value></item>
-    <item><label>MODERATE: fast breathing</label><value>5</value></item>
-    <item><label>MODERATE: chest pain</label><value>6</value></item>
-    <item><label>MODERATE: cough &gt; 2 weeks</label><value>7</value></item>
-    <item><label>MODERATE: wakes patient in night/morning</label><value>8</value></item>
+    <item><label>SEVERE: very fast breathing</label><value>sev_fast_breath</value></item>
+    <item><label>SEVERE: severe chest pain</label><value>sev_chst_pain</value></item>
+    <item><label>SEVERE: cannot walk without help</label><value>sev_cant_walk</value></item>
+    <item><label>SEVERE: uncomfortable lying down</label><value>sev_cant_lie</value></item>
+    <item><label>MODERATE: fast breathing</label><value>mod_fast_breath</value></item>
+    <item><label>MODERATE: chest pain</label><value>mod_chst_pain</value></item>
+    <item><label>MODERATE: cough &gt; 2 weeks</label><value>mod_cough_two_weeks</value></item>
+    <item><label>MODERATE: wakes patient in night/morning</label><value>mod_wake_in_night</value></item>
   </select>
 
   <select ref="assessment/weight">
     <label>Assessment: Select Symptoms of Weight Loss</label>
-    <item><label>SEVERE: severe undernutrition signs</label><value>1</value></item>
-    <item><label>MODERATE: significant weight loss</label><value>2</value></item>
+    <item><label>SEVERE: severe undernutrition signs</label><value>sev_undernut</value></item>
+    <item><label>MODERATE: significant weight loss</label><value>mod_weight_loss</value></item>
   </select>
 
   <select ref="assessment/pallor">
     <label>Assessment: Select Symptoms of Pallor</label>
-    <item><label>SEVERE: severe pallor</label><value>1</value></item>
-    <item><label>MODERATE: pallor</label><value>2</value></item>
+    <item><label>SEVERE: severe pallor</label><value>sev_pallor</value></item>
+    <item><label>MODERATE: pallor</label><value>mod_pallor</value></item>
   </select>
 
   <select ref="assessment/anogen">
     <label>Assessment: Select Symptoms of Anogenital Ulcer/Sore</label>
-    <item><label>MODERATE: vesicles</label><value>1</value></item>
-    <item><label>MODERATE: sore/ulcers</label><value>2</value></item>
-    <item><label>MODERATE: enl. inguinal node</label><value>3</value></item>
-    <item><label>MODERATE: warts</label><value>4</value></item>
+    <item><label>MODERATE: vesicles</label><value>mod_vesicles</value></item>
+    <item><label>MODERATE: sore/ulcers</label><value>mod_sores</value></item>
+    <item><label>MODERATE: enl. inguinal node</label><value>mod_inguinal</value></item>
+    <item><label>MODERATE: warts</label><value>mod_warts</value></item>
   </select>
 
   <select ref="assessment/dischg_abdom_pain">
     <label>Assessment: Select Symptoms of Genital Discharge/Abdominal Pain</label>
-    <item><label>SEVERE: reboard, guarding, or mass</label><value>1</value></item>
-    <item><label>SEVERE: fever &gt; 38</label><value>2</value></item>
-    <item><label>SEVERE: pulse &gt; 110</label><value>3</value></item>
-    <item><label>MODERATE: discharge</label><value>4</value></item>
-    <item><label>MODERATE: burning on urination</label><value>5</value></item>
-    <item><label>MODERATE: swelling/tenderness</label><value>6</value></item>
+    <item><label>SEVERE: reboard, guarding, or mass</label><value>sev_mass</value></item>
+    <item><label>SEVERE: fever &gt; 38</label><value>sev_fever</value></item>
+    <item><label>SEVERE: pulse &gt; 110</label><value>sev_pulse</value></item>
+    <item><label>MODERATE: discharge</label><value>mod_discharge</value></item>
+    <item><label>MODERATE: burning on urination</label><value>mod_burning</value></item>
+    <item><label>MODERATE: swelling/tenderness</label><value>mod_swelling</value></item>
   </select>
 
   <select ref="assessment/mouth_throat">
     <label>Assessment: Select Symptoms of Mouth/Throat Problem</label>
-    <item><label>SEVERE: not able to swallow / eat</label><value>1</value></item>
-    <item><label>MODERATE: pain</label><value>2</value></item>
-    <item><label>MODERATE: thrush</label><value>3</value></item>
-    <item><label>MODERATE: streptococcal</label><value>4</value></item>
-    <item><label>MODERATE: ulcers</label><value>5</value></item>
+    <item><label>SEVERE: not able to swallow / eat</label><value>sev_cant_swallow</value></item>
+    <item><label>MODERATE: pain</label><value>mod_pain</value></item>
+    <item><label>MODERATE: thrush</label><value>mod_thrush</value></item>
+    <item><label>MODERATE: streptococcal</label><value>mod_strept</value></item>
+    <item><label>MODERATE: ulcers</label><value>mod_ulcers</value></item>
   </select>
 
   <select ref="investigations/categories">
