Included help text

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -161,40 +161,49 @@
 
   <input ref="encounter_date">
     <label>Enter Date of Visit</label>
+	<hint> This should be the date the patient visited the clinic</hint>
   </input>
 	
   <select1 ref="encounter_type">
     <label>Do You Wish to Open a New Case?</label>
     <item><label>New Case</label><value>new_case</value></item>
     <item><label>Review</label><value>review</value></item>
+	<hint> Choose one type of encounter </hint>
   </select1>
 
   <input ref="chw_referral_id">
     <label>Enter CHW Referral # (leave blank if not available)</label>
+	<hint> This is the Referral ID on the Referral Form from the CHW </hint>
   </input>
 
   <input ref="vitals/height">
     <label>Enter Height (cm)</label>
+	<hint> This is the height in centimeters </hint>
   </input>
 	
   <input ref="vitals/weight">
     <label>Enter Weight (kg)</label>
+	<hint> This is the weight in kilograms</hint>
   </input>
 	
   <input ref="vitals/bp">
     <label>Enter Blood Pressure (___ / ___)</label>
+	<hint> Blood pressure should be recorded as systolic pressure over diastolic pressure </hint> 
   </input>
 	
   <input ref="vitals/temp">
     <label>Enter Temperature (*C)</label>
+	<hint> Temperature should be measured in Degrees Celcius </hint>
   </input>
 	
   <input ref="vitals/resp_rate">
     <label>Enter Respiratory Rate (per minute)</label>
+	<hint> Respiration should be the completed breaths per minute</hint>
   </input>
 	
   <input ref="vitals/heart_rate">
     <label>Enter Heart Rate (per minute)</label>
+	<hint> Heart rate should be measured during a complete minute and recorded on the form as beats per minute </hint>
   </input>
 	
   <select ref="danger_signs">
@@ -205,6 +214,7 @@
     <item><label>Severe pain</label><value>pain</value></item>
     <item><label>Fever &gt; 39*</label><value>fever</value></item>
 	<item><label>None</label><value>none</value></item>
+	<hint> Danger signs include respiratory distress, convulsions, unconsciousness, severe pain, or fever > 39°</hint>
   </select>
 
   <select ref="medical_history">
@@ -214,6 +224,7 @@
     <item><label>TB</label><value>tb</value></item>
     <item><label>STI</label><value>sti</value></item>
 	<item><label>None</label><value>none</value></item>
+	<hint> This includes all conditions that the patient has previously had </hint>
 	</select>
 
   <select1 ref="hiv_result">
@@ -236,6 +247,7 @@
     <item><label>Jaundice</label><value>jaundice</value></item>
     <item><label>Oedema</label><value>oedema</value></item>
 	<item><label>None Selected</label><value>none</value></item>
+	<hint> Select all physical exams conducted on the patient </hint>
 	</select>
 
   <select ref="phys_exam_detail">
@@ -252,6 +264,7 @@
     <item><label>Musculoskeletal</label><value>muscskel</value></item>
     <item><label>Neurological</label><value>neuro</value></item>
 	<item><label>No Abnormalities</label><value>none</value></item>
+	<hint> Select all abnormal findings from the physical exams conducted on the patient </hint>
 	</select>
 
   <select ref="assessment/categories">
@@ -263,6 +276,7 @@
     <item><label>Genital Discharge / Abdominal Pain</label><value>dischg_abdom_pain</value></item>
     <item><label>Mouth/Throat Problem</label><value>mouth_throat</value></item>
     <item><label>Other</label><value>other</value></item>
+	<hint> Select all assessments conducted on the patient </hint>
   </select>
 
   <select ref="assessment/resp">
@@ -275,18 +289,21 @@
     <item><label>MODERATE: chest pain</label><value>6</value></item>
     <item><label>MODERATE: cough &gt; 2 weeks</label><value>7</value></item>
     <item><label>MODERATE: wakes patient in night/morning</label><value>8</value></item>
+	<hint> Select all symptoms found on the patient </hint>
   </select>
 
   <select ref="assessment/weight">
     <label>Assessment: Select Symptoms of Weight Loss</label>
     <item><label>SEVERE: severe undernutrition signs</label><value>1</value></item>
     <item><label>MODERATE: significant weight loss</label><value>2</value></item>
+	<hint> Select all weight symptoms found on the patient </hint>
   </select>
 
   <select ref="assessment/pallor">
     <label>Assessment: Select Symptoms of Pallor</label>
     <item><label>SEVERE: severe pallor</label><value>1</value></item>
     <item><label>MODERATE: pallor</label><value>2</value></item>
+	<hint> Select all Pallor symptoms found on the patient </hint>
   </select>
 
   <select ref="assessment/anogen">
@@ -295,6 +312,7 @@
     <item><label>MODERATE: sore/ulcers</label><value>2</value></item>
     <item><label>MODERATE: enl. inguinal node</label><value>3</value></item>
     <item><label>MODERATE: warts</label><value>4</value></item>
+	<hint> Select all Anogenital Ulcer/Sore symptoms found on the patient </hint>
   </select>
 
   <select ref="assessment/dischg_abdom_pain">
@@ -305,6 +323,7 @@
     <item><label>MODERATE: discharge</label><value>4</value></item>
     <item><label>MODERATE: burning on urination</label><value>5</value></item>
     <item><label>MODERATE: swelling/tenderness</label><value>6</value></item>
+	<hint> Select all Genital Discharge/ Abdominal Pain symptoms found on the patient </hint>
   </select>
 
   <select ref="assessment/mouth_throat">
@@ -314,6 +333,7 @@
     <item><label>MODERATE: thrush</label><value>3</value></item>
     <item><label>MODERATE: streptococcal</label><value>4</value></item>
     <item><label>MODERATE: ulcers</label><value>5</value></item>
+	<hint> Select all Mouth/ Throat symptoms found on the patient </hint>
   </select>
 
   <select ref="investigations/categories">
@@ -329,6 +349,7 @@
     <item><label>RPR</label><value>rpr</value></item>
     <item><label>Sputum</label><value>sputum</value></item>
     <item><label>Other</label><value>other</value></item>
+	<hint> Select all investigations performed on the patient </hint>
   </select>
 
   <select1 ref="investigations/rdt_mps">
@@ -336,6 +357,7 @@
     <item><label>Negative</label><value>n</value></item>
     <item><label>Positive</label><value>p</value></item>
     <item><label>Not done</label><value>.</value></item>
+	<hint> Select the RDT/MPS Test result for the patient </hint>
   </select1>
 
   <select1 ref="investigations/hiv_rapid">
@@ -343,10 +365,12 @@
     <item><label>Reactive</label><value>r</value></item>
     <item><label>Not reactive</label><value>nr</value></item>
     <item><label>Not done</label><value>.</value></item>
+	<hint> Select the HIV Test result for the patient </hint>
   </select1>
 
   <input ref="investigations/cd4">
     <label>Enter CD4 Count (cells / mm3)</label>
+	<hint> CD4 count is cells/ mm3 </hint>
   </input>
 
   <input ref="investigations/wbc">
@@ -371,6 +395,7 @@
     <item><label>Glucose</label><value>glucose</value></item>
     <item><label>Protein</label><value>protein</value></item>
     <item><label>White Cells</label><value>whitecells</value></item>
+	<hint> Select all results from urine investigations done on the patient </hint>
   </select>
 
   <select ref="investigations/stool">
@@ -378,6 +403,7 @@
     <item><label>Blood</label><value>blood</value></item>
     <item><label>Pus</label><value>pus</value></item>
     <item><label>Parasite / Bacteria</label><value>parasite_bacteria</value></item>
+	<hint> Select all results from stool investigations done on the patient </hint>
   </select>
 
   <select1 ref="investigations/cxr">
@@ -385,6 +411,7 @@
     <item><label>Normal</label><value>norm</value></item>
     <item><label>Abnormal</label><value>abn</value></item>
     <item><label>Heart condition</label><value>heart</value></item>
+	<hint> Select a result from CXR investigations done on the patient </hint>
   </select1>
 
   <select1 ref="investigations/rpr">
@@ -392,6 +419,7 @@
     <item><label>Reactive</label><value>r</value></item>
     <item><label>Not reactive</label><value>nr</value></item>
     <item><label>Not done</label><value>.</value></item>
+	<hint> Select a result from RPR investigations done on the patient </hint>
   </select1>
 
   <select1 ref="investigations/sputum">
@@ -399,6 +427,7 @@
     <item><label>AAFB</label><value>aafb</value></item>
     <item><label>S</label><value>s</value></item>
     <item><label>NS</label><value>ns</value></item>
+	<hint> Select a result from Sputum investigations done on the patient </hint>
   </select1>
 
   <select1 ref="diagnosis">
@@ -415,6 +444,7 @@
     <item><label>Injury</label><value>injury</value></item>
     <item><label>Heart condition</label><value>heart</value></item>
     <item><label>Other</label><value>other</value></item>
+	<hint> Select the primary diagnosis done on the patient </hint>
   </select1>
 
   <group>
@@ -427,18 +457,22 @@
       <item><label>Benzodiazeprine</label><value>B</value></item>
       <item><label>Cotrimoxazole</label><value>C</value></item>
       <item><label>Other</label><value>other</value></item>
+	  <hint> Select the prescribed drug from the list </hint>
     </select1>
     
     <input ref="dosage">
       <label>Dosage (mg)</label>
+	  <hint> Enter the prescribed dosage of the drug</hint>
     </input>
 
     <input ref="freq">
       <label>How many times a day?</label>
+	  <hint> Enter the number of times in a day the drug should be taken </hint>
     </input>
 
     <input ref="duration">
       <label>For how many days?</label>
+	  <hint> Enter the number of days the drug should be taken for </hint>
     </input>
 
   </repeat>
@@ -448,6 +482,7 @@
     <label>Was original prescription dispensed?</label>
     <item><label>Yes</label><value>y</value></item>
     <item><label>No</label><value>n</value></item>
+	<hint> Select Yes if the drugs dispensed are the same as those prescribed, and No if otherwise </hint>
   </select1>
 
   <group>
@@ -460,18 +495,22 @@
       <item><label>Benzodiazeprine</label><value>B</value></item>
       <item><label>Cotrimoxazole</label><value>C</value></item>
       <item><label>Other</label><value>other</value></item>
+	  <hint> Select the drug dispensed if not the same as prescribed </hint>
     </select1>
     
     <input ref="dosage">
       <label>Dosage (mg)</label>
+	  <hint> Enter the dispensed dosage of the drug</hint>
     </input>
 
     <input ref="freq">
       <label>How many times a day?</label>
+	  <hint> Enter the number of times in a day the drug should be taken </hint>
     </input>
 
     <input ref="duration">
       <label>For how many days?</label>
+	  <hint> Enter the number of days the drug should be taken for </hint>
     </input>
 
   </repeat>
@@ -483,6 +522,7 @@
     <item><label>Follow Up with the Health Facility</label><value>followup-clinic</value></item>
     <item><label>Follow Up with CHW</label><value>followup-chw</value></item>
     <item><label>Case Closed in Clinic</label><value>closed</value></item>
+	<hint> Select a conculsion for this case </hint>
   </select1>
 
   <input ref="followup_days">
@@ -504,6 +544,7 @@
     <item><label>STI Treated</label><value>sti_treated</value></item>
     <item><label>Injuries Treated</label><value>injuries_treated</value></item>
     <item><label>Other</label><value>other</value></item>
+	<hint> Select an outcome for this case </hint>
   </select1>
 
 </h:body>
