removing special character, escaping greater than sign in xform

--- a/bhoma/xforms/bhoma_general.xhtml
+++ b/bhoma/xforms/bhoma_general.xhtml
@@ -214,7 +214,7 @@
     <item><label>Severe pain</label><value>pain</value></item>
     <item><label>Fever &gt; 39*</label><value>fever</value></item>
 	<item><label>None</label><value>none</value></item>
-	<hint> Danger signs include respiratory distress, convulsions, unconsciousness, severe pain, or fever > 39°</hint>
+	<hint> Danger signs include respiratory distress, convulsions, unconsciousness, severe pain, or fever &gt; 39 degrees</hint>
   </select>
 
   <select ref="medical_history">
